<resources>
    <string name="app_name">Brandy</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Login</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>

    <string name="new_post">New Post</string>

    // My new guys for SignUp and so on @hints
    <string name="hint_fname">first name</string>
    <string name="hint_lname">last name</string>
    <string name="hint_gender">gender</string>
    <string name="hint_city">city</string>
    <string name="hint_job_title">job title</string>
    <string name="hint_phone">phone</string>
    <string name="state">state</string>
    <string name="country">country</string>

    <string name="error_weak_password">Weak Password</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_user_exists">User already exists</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset_password">Forgot Password</string>
    <string name="forgot_password_msg">The message you get forgot_password_msg</string>
    <string name="lbl_forgot_password">lbl_forgot_password_msg</string>

</resources>
